fix z-index

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -14,7 +14,6 @@ body {
 
     header {
       height: auto;
-      z-index: 2;
 
       flex: 0 0 auto;
       display: flex;
@@ -24,7 +23,6 @@ body {
 
     main {
       flex: 1 1 auto;
-      z-index: 1;
 
       display: flex;
       align-items: center;
