--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,6 +1,5 @@
 .header {
   opacity: 1;
-  z-index: 1;
 }
 
 .header--hide {
