--- a/src/components/LanguageSelector/styles.module.scss
+++ b/src/components/LanguageSelector/styles.module.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.language-selector {
+  z-index: 2;
+}
+
 .language-selector--hide {
   opacity: 0;
   z-index: -1;
